--- a/CoreMLVisionDemo/CoreMLVisionDemo/Info.plist
+++ b/CoreMLVisionDemo/CoreMLVisionDemo/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Takes pictures to demonstrate image recognition.</string>
 </dict>
 </plist>
